test/Fail/Issue6244.err
Issue6244.agda:4.1-44: error: [SafeFlagPragma]
The --safe mode does not allow OPTIONS pragma
--no-load-primitives
